{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Player",
            "id": "6aebd6ab-a31d-438e-b2e6-802b8e60e851",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "7e9300f9-cce6-4a7a-91ab-da8ea4d8211c",
                    "expectedControlType": "Dpad",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "a707bf39-f731-4429-9371-8c38af26010e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "9a6ec2b4-1484-4577-a8f9-1b1a94dbd706",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "6c19b4bb-fe7b-49a7-9f6e-3b411190973c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Dash",
                    "type": "PassThrough",
                    "id": "88ad458c-c898-4801-89df-2a10686aa5b3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "WallClimbHold",
                    "type": "Button",
                    "id": "bd31f9c2-62a0-4c78-b9ab-a9409ad345c0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SneekThroughPlatform",
                    "type": "Button",
                    "id": "a8752b1d-0f32-4ba3-8b63-6daf77ef38e7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CameraLook",
                    "type": "Button",
                    "id": "3d8f97d9-2020-4ed2-a821-3477e52116b5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "BackUI",
                    "type": "Button",
                    "id": "2d113f84-90c5-4f4e-bcd8-67976141038b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "wasd",
                    "id": "0f069b2c-441f-4608-b24f-34f92977a155",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "febcaea4-b954-4f88-a1b0-f3d08959de47",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "4c0d1c24-e2d6-4635-9c73-1f3593565399",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "15551f5e-cfab-4082-91b5-b65d8a795c40",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "2614a6b6-c2d3-4c70-92fc-2cbc2524862b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "1d0d75a3-3459-4d80-bf6c-6b67e21413a1",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4a3ea8e0-fd64-4980-97b7-6665354f3e95",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "15f3d959-aa36-41cd-b705-f230a3cc6042",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4a86802e-1f6c-487a-bcce-b647676bcb60",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2548ae6a-9d76-45b0-95da-353386bb7f89",
                    "path": "<Keyboard>/d",
                    "interactions": "MultiTap",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "081ffe28-569e-4bde-94b7-f4776a92ff5e",
                    "path": "<Keyboard>/a",
                    "interactions": "MultiTap",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f56612ef-aeba-4d0f-9db2-1edb24de56de",
                    "path": "<Keyboard>/space",
                    "interactions": "MultiTap",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8f515c12-019d-4bc8-a2ea-a4cb221c52fb",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WallClimbHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e53961d7-509e-42fe-9099-c443b0d4ce2b",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SneekThroughPlatform",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "954f8b51-98d0-44db-b69b-c6edb30e4d0f",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "71245e32-ef37-4f7c-841c-904296bd8a67",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BackUI",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "1f8748df-3e05-4aeb-bdb7-02f906de72d1",
            "actions": [
                {
                    "name": "Back",
                    "type": "Button",
                    "id": "f9486cd4-64d2-4cdc-813f-5b6b33ddbe50",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Further",
                    "type": "Button",
                    "id": "7e1901ee-05e0-4afb-9765-28abfa513df8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "29b7abf6-6d14-41f7-be46-522a77f658d9",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Back",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2a11ab0b-6159-4505-ba2f-77e29b18839d",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Further",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6d2596fb-0be3-4233-9e01-2a3ee09e5154",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Further",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3fe0bb69-75f6-4b21-870e-2213da928160",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Further",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Dialog",
            "id": "e7817095-c773-484a-8dc9-a8abf10652d7",
            "actions": [
                {
                    "name": "Back",
                    "type": "Button",
                    "id": "ad46db8f-0a19-4e10-b0dd-f403c06d19f0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Further",
                    "type": "Button",
                    "id": "d4ac18af-f48c-44ca-b180-f24ae61de392",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cd503930-17a0-430a-bff3-2dfff18a5616",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Back",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ae1df63f-3de2-450b-b717-0d0dab6e5384",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Further",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d1499a88-fa36-4c7f-8045-a7e0b8855ae0",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Further",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a0974a9e-327b-4b94-bd00-a8c19fd80885",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Further",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Debug",
            "id": "76fb155f-bf3c-4160-9beb-83f21a69f9c3",
            "actions": [
                {
                    "name": "ToggleConsole",
                    "type": "Button",
                    "id": "f5e70adf-85c0-49eb-82b2-cfdd349fbe69",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ToggleSceneView",
                    "type": "Button",
                    "id": "379f4d62-ac41-4e99-9ad3-967208ceee87",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ToggleFPSView",
                    "type": "Button",
                    "id": "83ce8cf7-4980-4e10-b84d-6089f67a399e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "035ae003-1910-4861-8910-762505be02ea",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleConsole",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0a48a7f9-0528-4c54-bedc-46bd4721a620",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleSceneView",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b2e80b2e-fa1c-4d88-91d6-a2a7e2180265",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleFPSView",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard and Mouse",
            "bindingGroup": "Keyboard and Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}